--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,39 +1,39 @@
 .clients__title {
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-    color: var(--title-color);
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+  color: var(--title-color);
 }
 
 .clientslist {
-    display: flex;
-    justify-content: center;
-    color: #afb1b8;
+  display: flex;
+  justify-content: center;
+  color: #afb1b8;
 }
 
 .clientslist__icon {
-    fill: currentColor;
+  fill: currentColor;
 }
 
 .clientslist__link {
-    display: inline-flex;
-    width: 170px;
-    height: 92px;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    transition: color var(--transition), border var(--transition);
-}
+  display: inline-flex;
+  width: 170px;
+  height: 92px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: color var(--transition), border var(--transition);
 
-.clientslist__item:hover .clientslist__link,
-.clientslist__item  .clientslist__link:focus {
+  &:hover,
+  &:focus {
     color: var(--accent-color);
     border: 1px solid #2196f3;
+  }
 }
 
 .clientslist__item:not(:last-child) {
-    margin-right: 30px;
+  margin-right: 30px;
 }
