--- a/sass/components/_soclist.scss
+++ b/sass/components/_soclist.scss
@@ -1,26 +1,30 @@
 .soclist {
-    display: flex;
-    justify-content: center;
-    color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  color: var(--text-color);
 }
 
 .soclist__item a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    fill: #afb1b8;
-    transition: background-color var(--transition), fill var(--transition);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: #afb1b8;
+  transition: background-color var(--transition), fill var(--transition);
 }
 
-.soclist__item:hover a,
-.soclist__item a:focus {
+.soclist__link {
+
+  &:hover,
+  &:focus {
     background-color: var(--accent-color);
     fill: #ffffff;
+  }
 }
 
+
 .soclist__item:not(:last-child) {
-    margin-right: 10px;
+  margin-right: 10px;
 }
